--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yummy & Tasty</title>
     <link rel="stylesheet" href="./css/style.css" />
+    
 </head>
 
 <body>
@@ -17,10 +18,10 @@
             </div>
 
             <div class="nav-links-container">
-                <span>Home</span>
-                <span>Recipes</span>
-                <span>About Us</span>
-                <span>Contact</span>
+                <a>Home</a>
+                <a>Recipes</a>
+                <a href="./pages/about.html">About Us</a>
+                <a>Contact</a>
             </div>
 
             <div class="auth-link-container">
@@ -33,4 +34,5 @@
         <h1>Welcome To Yummy & Tasty</h1>
     </div>
 </body>
+
 </html>
