--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a>Home</a>
                 <a>Recipes</a>
                 <a href="./pages/about.html">About Us</a>
-                <a>Contact</a>
+                <a href="./pages/contact.html">Contact</a>
             </div>
 
             <div class="auth-link-container">
