--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="nav-links-container">
                 <a>Home</a>
-                <a>Recipes</a>
+                <a href="./pages/recepies.html">Recipes</a>
                 <a href="./pages/about.html">About Us</a>
                 <a href="./pages/contact.html">Contact</a>
             </div>
