--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             </div>
 
             <div class="nav-links-container">
-                <a>Home</a>
+                <a href="./index.html">Home</a>
                 <a href="./pages/recepies.html">Recipes</a>
                 <a href="./pages/about.html">About Us</a>
                 <a href="./pages/contact.html">Contact</a>
             </div>
 
             <div class="auth-link-container">
-                <span>Login</span>
-                <span>Sign Up</span>
+                <a href="./pages/login.html">Login</a>
+                <a>Sign Up</a>
             </div>
         </div>
     </div>
