--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <h1>This Is About Page</h1>
+    <div>
+        <div class="navbar-main-container">
+            <div class="logo-container">
+                <img src="./images/logo.png" width="50px" alt="Yummy & Tasty Logo" />
+                <b class="project-name">Yummy & tasty</b>
+            </div>
+
+            <div class="nav-links-container">
+                <a href="../index.html">Home</a>
+                <a href="./recepies.html">Recipes</a>
+                <a href="./about.html">About Us</a>
+                <a href="./contact.html">Contact</a>
+            </div>
+
+            <div class="auth-link-container">
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Sign Up</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
