--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yummy & Tasty</title>
+    <title>Sign page</title>
     <link rel="stylesheet" href="./css/style.css" />
-    
 </head>
-
 <body>
+    <h1>Sign Up</h1>
+    <h3>Sign up to continued</h3>
     <div>
         <div class="navbar-main-container">
             <div class="logo-container">
@@ -30,9 +30,5 @@
             </div>
         </div>
     </div>
-    <div>
-        <h1>Welcome To Yummy & Tasty</h1>
-    </div>
 </body>
-
 </html>
