--- a/pages/about.html
+++ b/pages/about.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
+
 <body>
-    <h1>This Is About Page</h1>
+
     <div>
         <div class="navbar-main-container">
             <div class="logo-container">
-                <img src="./images/logo.png" width="50px" alt="Yummy & Tasty Logo" />
+                <img src="../images/logo.png" width="50px" alt="Yummy & Tasty Logo" />
                 <b class="project-name">Yummy & tasty</b>
             </div>
 
@@ -29,5 +31,7 @@
             </div>
         </div>
     </div>
+    <h1>This Is About Page</h1>
 </body>
+
 </html>
