--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
+
 <body>
-    <h1>This Is Contact Page</h1>
+
     <div>
         <div class="navbar-main-container">
             <div class="logo-container">
-                <img src="./images/logo.png" width="50px" alt="Yummy & Tasty Logo" />
+                <img src="../images/logo.png" width="50px" alt="Yummy & Tasty Logo" />
                 <b class="project-name">Yummy & tasty</b>
             </div>
 
             <div class="nav-links-container">
-                <a href="./index.html">Home</a>
-                <a href="./pages/recepies.html">Recipes</a>
-                <a href="./pages/about.html">About Us</a>
-                <a href="./pages/contact.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="./recepies.html">Recipes</a>
+                <a href="./about.html">About Us</a>
+                <a href="./contact.html">Contact</a>
             </div>
 
             <div class="auth-link-container">
-                <a href="./pages/login.html">Login</a>
-                <a href="./pages/signup.html">Sign Up</a>
+                <a href="./login.html">Login</a>
+                <a href="./signup.html">Sign Up</a>
             </div>
         </div>
     </div>
+    <h1>This Is Contact Page</h1>
 </body>
+
 </html>
