--- a/pages/login.html
+++ b/pages/login.html
@@ -31,12 +31,26 @@
             </div>
         </div>
     </div>
-    <h2>This is Login page</h2>
-
 
     <div class="container">
         <div class="item">
-            <h1>login login</h1>
+            <h3>Login Here</h3>
+            <hr />
+            <form>
+                <label for="inputFullName">Enter Full Name :</label>
+                <input type="text" id="inputFullName" placeholder="Enter Name" required />
+                <br /><br />
+
+                <label for="inputPasswor">Enter Password :</label>
+                <input type="number" id="inputPassword" placeholder="Password" />
+                <br /> <br />
+
+                <input type="checkbox" id="rememberMe" />
+                <label for="rememberMe">Remember me</label><br /><br />
+
+                <span class="login-signup-button">Login</span>
+            </form>
+            <p>Don't have an account? <a href="./signup.html">Sign Up</a></p>
         </div>
     </div>
 </body>
