--- a/pages/signup.html
+++ b/pages/signup.html
@@ -31,8 +31,32 @@
             </div>
         </div>
     </div>
-    <h1>Sign Up</h1>
-    <h3>Sign up to continued</h3>
+
+    
+    <div class="container">
+        <div class="item">
+            <h3>Sign Up Here</h3>
+            <hr />
+            <form>
+                <label for="inputFullName">Enter Full Name :</label>
+                <input type="text" id="inputFullName" placeholder="Enter Name" required />
+                <br /><br />
+
+                <label for="inputEmail">Enter Email:</label>
+                <input type="text" id="inputEmail" placeholder="Enter Email" required />
+                <br /><br/>
+
+                <label for="inputPasswor">Enter Password :</label>
+                <input type="number" id="inputPassword" placeholder="Password" />
+                <br /> <br />
+
+                
+                <span class="login-signup-button">Sign Up</span>
+            </form>
+            <p>Already have an account? <a href="./login.html">Login</a></p>
+        </div>
+    </div>
+
 </body>
 
 </html>
