--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div>
-        <h1>Welcome To Yummy & Tasty</h1>
+        <h1 class="text">Welcome To Yummy & Tasty</h1>
     </div>
 </body>
 
