--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             </div>
 
             <div class="nav-links-container">
-                <a href="./index.html">Home</a>
-                <a href="./pages/recepies.html">Recipes</a>
-                <a href="./pages/about.html">About Us</a>
-                <a href="./pages/contact.html">Contact</a>
+                <a href="./index.html" class="menu-items">Home</a>
+                <a href="./pages/recepies.html" class="menu-items">Recipes</a>
+                <a href="./pages/about.html" class="menu-items">About Us</a>
+                <a href="./pages/contact.html" class="menu-items">Contact</a>
             </div>
 
             <div class="auth-link-container">
-                <a href="./pages/login.html">Login</a>
-                <a href="./pages/signup.html">Sign Up</a>
+                <a href="./pages/login.html" class="menu-items">Login</a>
+                <a href="./pages/signup.html" class="menu-items">Sign Up</a>
             </div>
         </div>
     </div>
