--- a/pages/login.html
+++ b/pages/login.html
@@ -19,15 +19,15 @@
             </div>
 
             <div class="nav-links-container">
-                <a href="../index.html">Home</a>
-                <a href="./recepies.html">Recipes</a>
-                <a href="./about.html">About Us</a>
-                <a href="./contact.html">Contact</a>
+                <a href="../index.html" class="menu-items">Home</a>
+                <a href="./recepies.html" class="menu-items">Recipes</a>
+                <a href="./about.html" class="menu-items">About Us</a>
+                <a href="./contact.html" class="menu-items">Contact</a>
             </div>
 
             <div class="auth-link-container">
-                <a href="./login.html">Login</a>
-                <a href="./signup.html">Sign Up</a>
+                <a href="./login.html" class="menu-items">Login</a>
+                <a href="./signup.html" class="menu-items">Sign Up</a>
             </div>
         </div>
     </div>
