--- a/index.html
+++ b/index.html
@@ -30,8 +30,24 @@
             </div>
         </div>
     </div>
-    <div>
-        <h1 class="text">Welcome To Yummy & Tasty</h1>
+
+    <div class="main-content-container">
+
+        <div>
+            <img src="./images/main-img.png" alt="Delicious food" class="main-image" />
+        </div>
+
+        <div>
+            <span class="heading"><b>Welcome To Yummy & Tasty</b></span><br />
+            <span>
+                <h2>"Taste That Begins Happiness"</h2>
+                <p>Orderd mouth-watering dishes prepared with love by our expert chef.<br/>
+                Enjoy your favourite meals anytime, anywhere.<br/>
+                Fast dilivery, fresh ingredient, 100% hygine gauranted.</p>
+            </span>
+        </div>
+    </div>
+
     </div>
 </body>
 
