--- a/pages/login.html
+++ b/pages/login.html
@@ -32,8 +32,8 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="item">
+    <div class="container-login-signup">
+        <div class="form">
             <h3>Login Here</h3>
             <hr />
             <form>
