--- a/pages/signup.html
+++ b/pages/signup.html
@@ -33,8 +33,8 @@
     </div>
 
 
-    <div class="container">
-        <div class="item">
+    <div class="container-login-signup">
+        <div class="form">
             <h3>Sign Up Here</h3>
             <hr />
             <form>
