--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     Enjoy your favourite meals anytime, anywhere.<br />
                     Fast dilivery, fresh ingredient, 100% hygine gauranted.</p>
             </span>
+
+            <div>
+                <button class="get-started-button">Get Started</button>
+                <button class="learn-more-button">Learn More</button>
+            </div>
         </div>
     </div>
 
